--- a/src/pages/page2/page2.html
+++ b/src/pages/page2/page2.html
@@ -8,15 +8,21 @@
 </ion-header>
 
 <ion-content>
+
+ 
+
   <ion-list>
-    <button ion-item *ngFor="let item of items" (click)="itemTapped($event, item)">
-      <ion-icon [name]="item.icon" item-left></ion-icon>
-      {{item.title}}
-      <div class="item-note" item-right>
-        {{item.note}}
-      </div>
-    </button>
+    <ion-item  *ngFor="let item of items" (click)="itemTapped($event, item)">
+      <ion-thumbnail item-left>
+        <img src="img/thumbnail-totoro.png">
+      </ion-thumbnail>
+      <h2>{{item.title}}</h2>
+      <p>{{item.note}}</p>
+      <button ion-button clear item-right>View</button>
+    </ion-item>
   </ion-list>
+
+
   <div *ngIf="selectedItem" padding>
     You navigated here from <b>{{selectedItem.title}}</b>
   </div>
