--- a/src/pages/page3/page3.html
+++ b/src/pages/page3/page3.html
@@ -12,4 +12,21 @@
 
 <ion-content padding>
   {{selectedItem.note || "sdfsdf"}}
+
+  <button (click)="left()"><</button>
+    {{question}}
+  <button (click)="right()">></button>
+
+
+      <div class="review" >
+
+            <p></p>
+
+           
+
+             <div *ngFor="let question of questions; let i = index;">
+                <div (click)="goTo(i + 1)" class="{{ isAnswered(i) == 'Answered'? 'answered': 'not-answered' }}">{{i + 1}}. {{ question }}</div>
+            </div>
+    </div>
+
 </ion-content>
