--- a/src/pages/page3/page3.html
+++ b/src/pages/page3/page3.html
@@ -11,7 +11,7 @@
 
 
 <ion-content padding>
-  {{selectedItem.note || "sdfsdf"}}
+  {{selectedTopic.title || "sdfsdf"}}
 
   <button (click)="left()"><</button>
     {{question}}
