--- a/src/pages/page2/page2.html
+++ b/src/pages/page2/page2.html
@@ -12,12 +12,12 @@
  
 
   <ion-list>
-    <ion-item  *ngFor="let item of items" (click)="itemTapped($event, item)">
+    <ion-item  *ngFor="let topic of topics" (click)="itemTapped($event, topic)">
       <ion-thumbnail item-left>
         <img src="img/thumbnail-totoro.png">
       </ion-thumbnail>
-      <h2>{{item.title}}</h2>
-      <p>{{item.note}}</p>
+      <h2>{{topic.title}}</h2>
+      <p>{{topic.note}}</p>
       <button ion-button clear item-right>View</button>
     </ion-item>
   </ion-list>
