--- a/src/pages/page3/page3.html
+++ b/src/pages/page3/page3.html
@@ -15,7 +15,7 @@
 
 <p></p>
 
- <div id="quiz"  *ngIf="data != undefined && data.quiz != undefined && !showReview">
+ <div id="quiz"  *ngIf="data != undefined && data.quiz != undefined && mode === 'quiz'">
             <div class="center">
                 <img height="80" width="80" src="{{data.quiz.logo}}" />
                 <h1>  {{selectedTopic.title || "sdfsdf"}}</h1>
@@ -79,13 +79,13 @@
                         <br />
                         <div style="text-align:center">
                            
-                            <button (click)="review()" ion-button icon-left>
+                            <button (click)="setMode('review')" ion-button icon-left>
                               <ion-icon name="list"></ion-icon>
                               Review
                             </button>
 
 
-                             <button (click)="right()" ion-button icon-left>
+                             <button (click)="setMode('result')" ion-button icon-left>
                               Submit &nbsp;
                                <ion-icon name="checkmark-circle-outline"></ion-icon>
                             </button>
@@ -100,28 +100,102 @@
 <p></p>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <div *ngIf="showReview" class="review">
+  <div *ngIf="mode=='review'" class="review">
     <p></p>
     <div *ngFor="let question of questions; let i = index;">
       <div (click)="goTo(i + 1)" class="{{ isAnswered(i) == 'Answered'? 'answered': 'not-answered' }}">{{i + 1}}. {{ question }}</div>
     </div>
     <p></p>
-     <button  ion-button (click)="closeReview()"> Back </button>
+     <button  ion-button (click)="setMode('quiz')"> Back </button>
   </div>
+
+
+
+  
+
+    <div class="center result" *ngIf="mode=='result'">
+            <p></p>
+            <!--<div class="center" id="circle"></div>-->
+                 <ion-card>
+
+
+                 <ion-item>
+                  <ion-avatar item-left>
+                    <img src="../../assets/img/exam.jpg">
+                  </ion-avatar>
+                  <h2>Score Card</h2>
+                  <p>Fail</p>
+                </ion-item>
+                  <hr/>
+
+                <div class="item item-body">
+
+                    <div class="row">
+                        <div class="col col-80">Total Questions</div>
+                        <div class="col col-20">{{10}}</div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col col-80">Correct Answers</div>
+                        <div class="col col-20">{{6}}</div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col col-80">Incorrect Answers</div>
+                        <div class="col col-20">{{6}}</div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col col-80">Total</div>
+                        <div class="col col-20"><strong>{{66}} %</strong></div>
+                    </div>
+                    <div class="row">
+                        <div class="col col-80"><strong>Result</strong></div>
+                        <div class="col col-20"><strong>{{'Pass'}}</strong></div>
+                    </div>
+                    <hr/>
+                    <!-- <img class="full-image" height="150" width="100" ng-src="data/img/table.jpg"> -->
+                    <p class="center">
+
+                        <button ion-button (click)="setMode('quiz')">Close</button>
+                    </p>
+
+                </div>
+            </ion-card>
+            <p></p>
+
+
+
+            <p class="center">
+                The correct answers are highlighted in green.
+            </p>
+            <div *ngFor="let question of questions; let i = index">
+                <div class="result-question">
+                    <h3>{{i + 1}}. {{question.Name}}</h3>
+                    <div class="result-options">
+                        <div *ngFor="let Option of question.Options">
+                            <label  class="{{  Option.IsAnswer ? 'result-correct': 'result-incorrect' }}"> 
+                                <input id="{{Option.Id}}" type="checkbox" disabled="disabled" readonly="readonly"  /> {{Option.Name}}
+                            </label>
+                           <!--<label ng-click="onSelect(Option);" class="{{  Option.IsAnswer ? 'result-correct': 'result-incorrect' }}"> 
+                                <input id="{{Option.Id}}" type="checkbox" disabled="disabled" readonly="readonly" ng-model="Option.Selected" /> {{Option.Name}}
+                            </label>-->
+                        </div>
+                    </div>
+                    <p></p>
+                    <button ion-button>{{true}} answer.</button>
+                    <button *ngIf="question.Explanation" ion-button>Explanation</button>
+
+                </div>
+            </div>
+            <div class="center">
+                <button ion-button (click)="setMode('quiz')">Close</button>
+            </div>
+
+
+        </div>
+
+
+       
 
 </ion-content>
