--- a/src/pages/page1/page1.html
+++ b/src/pages/page1/page1.html
@@ -8,11 +8,37 @@
 </ion-header>
 
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
+  
+<ion-card>
+ 
 
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
+<ion-item>
+    <ion-avatar item-left>
+       <img src="../assets/img/icon.png">
+    </ion-avatar>
+    <h2>AWS Cert. Sol. Arch Professional</h2>
+    <p>Cloud Pros</p>
+  </ion-item>
+<hr/>
+ <ion-card-content style="text-align: justify;">    
+   <!--  <img class="full-image" src="delorean.jpg"> -->
+    <p>
+     Thank you for using our app. If you have any questions or feedback about this app or its contents,
+     please contact us either by email or facebook. Drop us a line at <strong>cloudpros1@gmail.com</strong>
+    </p>
+    <p>&nbsp;</p>
+    <p>Or look up 'The Cloud Institute' on <strong> Facebook.</strong></p>
+    <p>&nbsp;</p>
+    <p> And don't forget to check out our apps for all 3 Associate Level AWS Exams. Thousands have used these apps to clear the exam at the first attempt.'
+    <p>
+      <p>&nbsp;</p>
+    <p>
+      Thanks and all the best!
+    </p>
+</ion-card-content>
+</ion-card>
 
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+<div class="center">
+  <button ion-button secondary menuToggle>Back</button>
+  </div>
 </ion-content>
