Reordering and Sliding items

--- a/src/pages/page2/page2.html
+++ b/src/pages/page2/page2.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar  color="primary">
+  <ion-navbar color="primary">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
@@ -9,17 +9,48 @@
 
 <ion-content>
 
- 
+
 
   <ion-list>
-    <ion-item  *ngFor="let topic of topics" (click)="itemTapped($event, topic)">
-      <ion-thumbnail item-left>
-        <img src="{{topic.icon}}">
-      </ion-thumbnail>
-      <h2>{{topic.title}}</h2>
-      <p>{{topic.note}}</p>
-      <button ion-button clear item-right>View</button>
-    </ion-item>
+
+    <ion-item-group reorder="true" (ionItemReorder)="reorderTopics($event)">
+
+      <ion-item-sliding *ngFor="let topic of topics">
+        <ion-item (click)="itemTapped($event, topic)" detail-push>
+          <ion-thumbnail item-left>
+            <img src="{{topic.icon}}">
+          </ion-thumbnail>
+          <h2>{{topic.title}}</h2>
+          <p>{{topic.note}}</p>
+        </ion-item>
+
+        <ion-item-options side="left">
+          <button ion-button (click)="favorite(item)">Favorite</button>
+          <button ion-button color="danger" (click)="share(item)">Share</button>
+        </ion-item-options>
+
+        <ion-item-options side="right">
+          <button ion-button (click)="unread(item)">Unread</button>
+        </ion-item-options>
+
+
+
+
+      </ion-item-sliding>
+    </ion-item-group>
+    <ion-item-divider>
+      Practice Exams
+    </ion-item-divider>
+
+    <ion-item-group reorder="true" (ionItemReorder)="reorderExams($event)">
+      <ion-item *ngFor="let exam of exams" (click)="itemTapped($event, exam)" detail-push>
+        <ion-thumbnail item-left>
+          <img src="{{exam.icon}}">
+        </ion-thumbnail>
+        <h2>{{exam.title}}</h2>
+        <p>{{exam.note}}</p>
+      </ion-item>
+    </ion-item-group>
   </ion-list>
 
 
