--- a/src/pages/page2/page2.html
+++ b/src/pages/page2/page2.html
@@ -7,8 +7,14 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content>
 
+<ion-content>
+<ion-searchbar
+  [(ngModel)]="myInput"
+  [showCancelButton]="shouldShowCancel"
+  (ionInput)="onInput($event)"
+  (ionCancel)="onCancel($event)">
+</ion-searchbar>
 
 
   <ion-list>
