--- a/src/pages/page2/page2.html
+++ b/src/pages/page2/page2.html
@@ -37,12 +37,12 @@
         </ion-item>
 
         <ion-item-options side="left">
-          <button ion-button (click)="favorite(item)">Favorite</button>
-          <button ion-button color="danger" (click)="share(item)">Share</button>
+          <button ion-button (click)="favorite(item)"><ion-icon name="star"></ion-icon>Favorite</button>
+          <button ion-button color="danger" (click)="share(item)"><ion-icon name="share"></ion-icon>Share</button>
         </ion-item-options>
 
         <ion-item-options side="right">
-          <button ion-button (click)="unread(item)">Unread</button>
+          <button ion-button color="danger" (click)="unread(item)"><ion-icon name="trash"></ion-icon>Delete</button>
         </ion-item-options>
 
 
