ng2-simple-timer added

--- a/src/pages/topicDetailPage/topicDetailPage.html
+++ b/src/pages/topicDetailPage/topicDetailPage.html
@@ -29,6 +29,17 @@
             </div>-->
 
                   <ion-card>
+                      <!--https://github.com/previousdeveloper/angular2-simple-countdown-->
+                      <!--<count-down [text]="text" units="Days | Hours | Minutes | Seconds" end="April 13, 2017"></count-down>-->
+                            <!--The above timer did not work-->
+
+
+
+                      <!--https://github.com/J-Siu/ng2-simple-timer-->
+                      <!--http://embed.plnkr.co/HaTd8q/-->
+                      <div>{{counter0}} Mts</div>
+  		                <div> Sec: {{counter1}}</div>
+
                       <ion-item>
                        <p style="text-align:center">Question {{question.Id}} of {{questions.length}}.</p>
                         </ion-item>
