--- a/src/pages/topicDetailPage/topicDetailPage.html
+++ b/src/pages/topicDetailPage/topicDetailPage.html
@@ -28,6 +28,10 @@
                 </button>
             </div>-->
 
+<div class="center">
+<button ion-button outline><ion-icon name="timer"></ion-icon>  &nbsp;{{minutes}} Mts,  {{seconds}} s</button>
+</div>
+                
                   <ion-card>
                       <!--https://github.com/previousdeveloper/angular2-simple-countdown-->
                       <!--<count-down [text]="text" units="Days | Hours | Minutes | Seconds" end="April 13, 2017"></count-down>-->
@@ -37,8 +41,7 @@
 
                       <!--https://github.com/J-Siu/ng2-simple-timer-->
                       <!--http://embed.plnkr.co/HaTd8q/-->
-                      <div>{{counter0}} Mts</div>
-  		                <div> Sec: {{counter1}}</div>
+                      
 
                       <ion-item>
                        <p style="text-align:center">Question {{question.Id}} of {{questions.length}}.</p>
