--- a/src/pages/page1/page1.html
+++ b/src/pages/page1/page1.html
@@ -29,7 +29,7 @@
     <p>&nbsp;</p>
     <p>Or look up 'The Cloud Institute' on <strong> Facebook.</strong></p>
     <p>&nbsp;</p>
-    <p> And don't forget to check out our apps for all 3 Associate Level AWS Exams. Thousands have used these apps to clear the exam at the first attempt.'
+    <p> And don't forget to check out our apps for all 3 Associate Level AWS Exams. Thousands have used these apps to clear the exam at the first attempt.
     <p>
       <p>&nbsp;</p>
     <p>
