--- a/src/pages/page2/page2.html
+++ b/src/pages/page2/page2.html
@@ -63,7 +63,20 @@
   </ion-list>
 
 
-  <div *ngIf="selectedItem" padding>
-    You navigated here from <b>{{selectedItem.title}}</b>
-  </div>
+ <ion-fab bottom right >
+   <button ion-fab>  <ion-icon name="share"></ion-icon></button>
+   <ion-fab-list side="top">
+     <button ion-fab> <ion-icon name="logo-facebook"></ion-icon></button>
+     <button ion-fab><ion-icon name="logo-googleplus"></ion-icon></button>
+     <button ion-fab> <ion-icon name="logo-twitter"></ion-icon></button>
+     <button ion-fab><ion-icon name="mail"></ion-icon></button>
+       
+   </ion-fab-list>
+   <!--<ion-fab-list side="left">
+     <button ion-fab>Vimeo</button>
+     <button ion-fab>Twitter</button>
+     <button ion-fab>Twitter</button>
+   </ion-fab-list>-->
+ </ion-fab>
+
 </ion-content>
