--- a/src/pages/topicDetailPage/topicDetailPage.html
+++ b/src/pages/topicDetailPage/topicDetailPage.html
@@ -1,6 +1,6 @@
 <ion-header>
 
-  <ion-navbar color="primary">
+  <ion-navbar hideBackButton color="primary">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
