--- a/src/pages/page2/page2.html
+++ b/src/pages/page2/page2.html
@@ -71,7 +71,8 @@
      <button ion-fab> <ion-icon name="logo-facebook"></ion-icon></button>
      <button ion-fab><ion-icon name="logo-googleplus"></ion-icon></button>
      <button ion-fab> <ion-icon name="logo-twitter"></ion-icon></button>
-     <button ion-fab><ion-icon name="mail"></ion-icon></button>
+     <button ion-fab> <ion-icon name="text"></ion-icon></button>
+     <button ion-fab (click)= "shareViaMail()"><ion-icon name="mail"></ion-icon></button>
        
    </ion-fab-list>
    <!--<ion-fab-list side="left">
