--- a/src/pages/auth/resendCode.html
+++ b/src/pages/auth/resendCode.html
@@ -11,6 +11,11 @@
 <ion-content>
   <ion-list>
 
+     <p>&nbsp;</p>
+    <div class="center">
+    <img src="../../assets/img/SWF.png" >
+    </div>
+
     <ion-item>
       <ion-label floating>Email</ion-label>
       <ion-input [(ngModel)]="email" type="email"></ion-input>
