--- a/src/pages/topicDetailPage/topicDetailPage.html
+++ b/src/pages/topicDetailPage/topicDetailPage.html
@@ -137,7 +137,7 @@
                     <img src="../../assets/img/exam.jpg">
                 </ion-avatar>
                 <h2>Score Card</h2>
-                <p>Fail</p>
+                <p>{{verdict}}</p>
             </ion-item>
             <hr/>
 
