--- a/src/pages/topicDetailPage/topicDetailPage.html
+++ b/src/pages/topicDetailPage/topicDetailPage.html
@@ -92,7 +92,7 @@
             </ion-card-header>
             <br />
             <div style="text-align:center">
-                <button (click)="presentConfirm()" color="danger" ion-button icon-left>
+                <button (click)="presentAbortConfirm()" color="danger" ion-button icon-left>
                               <ion-icon name="close"></ion-icon>
                               Abort
                             </button>
@@ -103,7 +103,7 @@
                             </button>
 
 
-                <button (click)="calculateAndUpdateScore()" ion-button icon-left>
+                <button (click)="presentSubmitConfirm()" ion-button icon-left>
                               Submit &nbsp;
                                <ion-icon name="checkmark-circle-outline"></ion-icon>
                             </button>
