--- a/src/pages/topicDetailPage/topicDetailPage.html
+++ b/src/pages/topicDetailPage/topicDetailPage.html
@@ -17,7 +17,7 @@
 
     <div id="quiz" *ngIf="data != undefined && data.quiz != undefined && mode === 'quiz'">
         <div class="center">
-            <h3> {{selectedTopic.title || "sdfsdf"}}</h3>
+            <h3> {{data.quiz.name|| "Exam"}}</h3>
             <img height="80" width="80" src="{{data.quiz.logo}}" />
         </div>
 
