assets relative path to www

--- a/src/modals/explanationModal.html
+++ b/src/modals/explanationModal.html
@@ -17,7 +17,7 @@
 
     <ion-item>
       <ion-avatar item-left>
-        <img src="../assets/img/icon.png">
+        <img src="assets/img/icon.png">
       </ion-avatar>
       <h2>AWS Solution Architect Pro</h2>
       <p>Cloud Pros</p>
