--- a/src/pages/auth/registration.html
+++ b/src/pages/auth/registration.html
@@ -14,7 +14,7 @@
   <ion-list>
      <p>&nbsp;</p>
     <div class="center">
-    <img src="../../assets/img/SWF.png" >
+    <img src="assets/img/SWF.png" >
     </div>
 
     <ion-item>
