--- a/src/pages/auth/resendCode.html
+++ b/src/pages/auth/resendCode.html
@@ -13,7 +13,7 @@
 
      <p>&nbsp;</p>
     <div class="center">
-    <img src="../../assets/img/SWF.png" >
+    <img src="assets/img/SWF.png" >
     </div>
 
     <ion-item>
