--- a/src/pages/topicDetailPage/topicDetailPage.html
+++ b/src/pages/topicDetailPage/topicDetailPage.html
@@ -134,7 +134,7 @@
         <ion-card>
             <ion-item>
                 <ion-avatar item-left>
-                    <img src="../../assets/img/exam.jpg">
+                    <img src="assets/img/exam.jpg">
                 </ion-avatar>
                 <h2>Score Card</h2>
                 <p>{{verdict}}</p>
