--- a/src/pages/auth/login.html
+++ b/src/pages/auth/login.html
@@ -27,7 +27,7 @@
   <ion-list>
     <p>&nbsp;</p>
     <div class="center">
-    <img src="../../assets/img/aws-cognito.png" style="width:50%">
+    <img src="assets/img/aws-cognito.png" style="width:50%">
     </div>
 
     <ion-item>
