--- a/src/pages/contactUsPage/contactUsPage.html
+++ b/src/pages/contactUsPage/contactUsPage.html
@@ -14,7 +14,7 @@
 
 <ion-item>
     <ion-avatar item-left>
-       <img src="../assets/img/icon.png">
+       <img src="assets/img/icon.png">
     </ion-avatar>
     <h2>AWS Cert. Sol. Arch Professional</h2>
     <p>Cloud Pros</p>
