Login page styling

--- a/src/pages/auth/forgotPassword.html
+++ b/src/pages/auth/forgotPassword.html
@@ -8,7 +8,14 @@
     </ion-title>
   </ion-navbar>
 </ion-header>
+
 <ion-content>
+
+    <p>&nbsp;</p>
+    <div class="center">
+    <img src="assets/img/Route53.png" style="width:20%">
+    </div>
+
   <ion-list>
 
     <ion-item>
@@ -21,7 +28,7 @@
     </ion-item>
   </ion-list>
 
-  <ion-grid>
+  <!--<ion-grid>
     <ion-row>
       <ion-col width-50>
         <button ion-button clear small (click)="navToRegister()">Sign up</button>
@@ -30,5 +37,12 @@
         <button ion-button clear small (click)="navToLogin()">Login</button>
       </ion-col>
     </ion-row>
-  </ion-grid>
+  </ion-grid>-->
+
+   <div class="center">
+    Not a member?   <button margin-bottom ion-button clear small (click)="navToRegister()">Register</button>
+  </div>
+   <div class="center">
+    Ready to login? <button margin-bottom ion-button clear small (click)="navToLogin()">Login</button>
+  </div>
 </ion-content>
