--- a/src/pages/auth/confirmRegistration.html
+++ b/src/pages/auth/confirmRegistration.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="primary">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
@@ -10,6 +10,12 @@
 </ion-header>
 
 <ion-content>
+   <p>&nbsp;</p>
+    <div class="center">
+    <img src="assets/img/aws-cognito.png" style="width:20%">
+    </div>
+
+
   <ion-list>
     <ion-item>
       <ion-label floating>Confirmation Code</ion-label>
@@ -21,7 +27,7 @@
     </ion-item>
 
   </ion-list>
-
+<!--
   <ion-grid>
     <ion-row>
       <ion-col width-30>
@@ -34,6 +40,19 @@
         <button ion-button clear small (click)="navToLogin()">Login</button>
       </ion-col>
     </ion-row>
-  </ion-grid>
+  </ion-grid>-->
+
+
+
+  <div class="center">
+    Need a Code again? <button margin-bottom ion-button clear small (click)="navToResendCode()">Resend Code</button>
+  </div>
+   <div class="center">
+    Ready to Register? <button margin-bottom ion-button clear small (click)="navToRegister()">Register</button>
+  </div>
+   <div class="center">
+    Ready to Login? <button margin-bottom ion-button clear small (click)="navToLogin()">Login</button>
+  </div>
+
 
 </ion-content>
