--- a/src/pages/auth/forgotPasswordStep2.html
+++ b/src/pages/auth/forgotPasswordStep2.html
@@ -11,6 +11,11 @@
 <ion-content>
   <ion-list>
 
+ <p>&nbsp;</p>
+    <div class="center">
+    <img src="assets/img/VPC.png" style="width:20%">
+    </div>
+
     <ion-item>
       <ion-label floating>Verification Code</ion-label>
       <ion-input [(ngModel)]="verificationCode" type="text"></ion-input>
@@ -26,7 +31,7 @@
     </ion-item>
   </ion-list>
 
-  <ion-grid>
+  <!--<ion-grid>
     <ion-row>
       <ion-col width-50>
         <button ion-button clear small (click)="navToRegister()">Sign up</button>
@@ -35,5 +40,12 @@
         <button ion-button clear small (click)="navToLogin()">Login</button>
       </ion-col>
     </ion-row>
-  </ion-grid>
+  </ion-grid>-->
+
+   <div class="center">
+    Not a member?   <button margin-bottom ion-button clear small (click)="navToRegister()">Register</button>
+  </div>
+   <div class="center">
+    Ready to Login? <button margin-bottom ion-button clear small (click)="navToLogin()">Login</button>
+  </div>
 </ion-content>
