--- a/src/pages/auth/login.html
+++ b/src/pages/auth/login.html
@@ -27,11 +27,11 @@
   <ion-list>
     <p>&nbsp;</p>
     <div class="center">
-    <img src="assets/img/aws-cognito.png" style="width:50%">
+    <img src="assets/img/aws-cognito.png" style="width:20%">
     </div>
 
     <ion-item>
-      <ion-label floating>Username</ion-label>
+      <ion-label floating>Email</ion-label>
       <ion-input [(ngModel)]="email" type="email"></ion-input>
     </ion-item>
 
