--- a/src/pages/auth/registration.html
+++ b/src/pages/auth/registration.html
@@ -18,7 +18,7 @@
     </div>
 
     <ion-item>
-      <ion-label floating>Username</ion-label>
+      <ion-label floating>Email</ion-label>
       <ion-input [(ngModel)]="registrationUser.email" type="email"></ion-input>
     </ion-item>
 
@@ -48,7 +48,7 @@
     Didn't receive code?   <button margin-bottom ion-button clear small (click)="navToResendCode()">Resend Code</button>
   </div>
    <div class="center">
-    All signed up ready? <button margin-bottom ion-button clear small (click)="navToLogin()">Login</button>
+    Ready to Login? <button margin-bottom ion-button clear small (click)="navToLogin()">Login</button>
   </div>
 
 </ion-content>
