--- a/src/pages/auth/resendCode.html
+++ b/src/pages/auth/resendCode.html
@@ -26,7 +26,7 @@
     </ion-item>
   </ion-list>
 
-  <ion-grid>
+  <!--<ion-grid>
     <ion-row>
       <ion-col width-50>
         <button ion-button clear small (click)="navToRegister()">Sign up</button>
@@ -35,7 +35,13 @@
         <button ion-button clear small (click)="navToLogin()">Login</button>
       </ion-col>
     </ion-row>
-  </ion-grid>
+  </ion-grid>-->
 
+ <div class="center">
+    Not a member?   <button margin-bottom ion-button clear small (click)="navToRegister()">Register</button>
+  </div>
+   <div class="center">
+    Ready to login? <button margin-bottom ion-button clear small (click)="navToLogin()">Login</button>
+  </div>
 </ion-content>
 
