--- a/src/pages/topicsListPage/topicsListPage.html
+++ b/src/pages/topicsListPage/topicsListPage.html
@@ -30,7 +30,8 @@
       <!--<ion-item-sliding *ngFor="let topic of topics">
         <ion-item (click)="itemTapped($event, topic)" detail-push>-->
 
-        <ion-item  *ngFor="let topic of topics" (click)="itemTapped($event, topic)" detail-push>
+        <ion-item  *ngFor="let topic of topics | slice:0:8; let i = index;" (click)="itemTapped($event, topic)" detail-push>
+          
           <ion-thumbnail item-left>
             <img src="{{topic.icon}}">
           </ion-thumbnail>
@@ -53,7 +54,7 @@
    
     <ion-item-divider color="light">Mock Exams</ion-item-divider>
     <ion-item-group [reorder]="reorder" (ionItemReorder)="reorderExams($event)">
-      <ion-item *ngFor="let exam of exams" (click)="itemTapped($event, exam)" detail-push>
+      <ion-item *ngFor="let exam of topics | slice:8:10; let i = index;" (click)="itemTapped($event, exam)" detail-push>
         <ion-thumbnail item-left>
           <img src="{{exam.icon}}">
         </ion-thumbnail>
