--- a/src/modals/examStartingModal.html
+++ b/src/modals/examStartingModal.html
@@ -34,7 +34,7 @@
         <img src="assets/img/icon.png">
       </ion-avatar>
       <h2>Exam Starting</h2>
-      <p>AWS Certified Sol Arch - Professional</p>
+      <p>{{note}}</p>
     </ion-item>
     <hr/>
 
