--- a/src/modals/examStartingModal.html
+++ b/src/modals/examStartingModal.html
@@ -33,7 +33,7 @@
       <ion-avatar item-left>
         <img src="assets/img/icon.png">
       </ion-avatar>
-      <h2>Exam Starting</h2>
+      <h2>{{title}}</h2>
       <p>{{note}}</p>
     </ion-item>
     <hr/>
